@@ -1,20 +1,10 @@
 ﻿<UserCombinePreferences version="1.0" filename="/mnt/crypted/coding/mono/v4l-net/trunk/v4l-net.mds">
   <Files>
-    <File name="v4l-net/Analog/Adapter.cs" line="349" column="25" />
-    <File name="v4l-net/Analog/Video/BaseFormat.cs" line="38" column="44" />
-    <File name="v4l-net/Analog/Video/VideoFormat.cs" line="49" column="11" />
+    <File name="Welcome" />
   </Files>
   <Views>
     <ViewMemento id="ProjectPad">
-      <Node expanded="True">
-        <Node name="v4l-net" expanded="True">
-          <Node name="Analog" expanded="True">
-            <Node name="Video" expanded="True">
-              <Node name="VideoFormat.cs" selected="True" />
-            </Node>
-          </Node>
-        </Node>
-      </Node>
+      <Node expanded="True" />
     </ViewMemento>
     <ViewMemento id="ClassPad">
       <Node expanded="True" />
@@ -27,7 +17,7 @@
     </ViewMemento>
   </Views>
   <Properties>
-    <Property key="ActiveWindow" value="/mnt/crypted/coding/mono/v4l-net/trunk/v4l-net/Analog/Video/VideoFormat.cs" />
-    <Property key="ActiveConfiguration" value="Debug" />
+    <Property key="ActiveWindow" value="Welcome" />
+    <Property key="ActiveConfiguration" value="Release" />
   </Properties>
 </UserCombinePreferences>
