@@ -1,3 +1,10 @@
+2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 
+
+	* Analog/Video/OverlayOutputFormat.cs, Analog/Video/OverlayCaptureFormat.cs,
+	  Analog/Video/OverlayFormat.cs: video overlay support added
+	* Analog/Video/VideoFormat.cs, Analog/Video/BaseFormat.cs,
+	  Analog/Video/VideoCaptureFormat.cs: refactored constructor inheritance
+
 === Release 0.3 ===
 
 2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 
